--- a/SDL_RWwrite.mediawiki
+++ b/SDL_RWwrite.mediawiki
@@ -3,20 +3,21 @@
 '''DRAFT'''
 
 = SDL_RWwrite =
-Use this function (macro) to *call the write function in an SDL_RWops structure.*
+Use this function to write to a data source ''-or-'' *call the write function in an SDL_RWops structure.*
 
 
 == Syntax ==
 ```c++
-SDL_RWwrite(ctx, ptr, size, n)
+size_t SDL_RWwrite(struct SDL_RWops* context,
+                   const void*       ptr,
+                   size_t            size,
+                   size_t            num)
 ```
-<<Color2(green,Should there be anything to indicate a RV at the beginning of the syntax? Should the 4 params be on separate lines like a regular function even though the rest of the syntax is different? Should the following be included in the syntax section?)>>
- (ctx)->write(ctx, ptr, size, n)
 
 == Function Parameters ==
 {|
-|'''ctx'''
-|*a pointer to an SDL_RWops structure*
+|'''context'''
+|a pointer to an SDL_RWops structure
 |-
 |'''ptr'''
 |*a pointer to an area in memory to read data from*
@@ -24,11 +25,15 @@ SDL_RWwrite(ctx, ptr, size, n)
 |'''size'''
 |*the size of the memory blocks to write*
 |-
-|'''n'''
+|'''num'''
 |*the exact number of memory blocks to write*
 |}
 
 == Return Value ==
+Returns the number of objects written, or 0 at error or end of file; call [[SDL_GetError]]() for more information.
+
+''-or-''
+
 *On success, it returns the number of memory blocks you told it to write. If it couldn't write that exact number of blocks, or the write didn't work at all, it returns -1*; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
@@ -65,13 +70,15 @@ int main()
 *
 
 == Remarks ==
-*,,Note: ,,This is not a built-in function. This is a macro that calls whatever write function happens to be in the SDL_RWops structure.*
+*<br/>This is not a built-in function. This is a macro that calls whatever write function happens to be in the SDL_RWops structure.<br/>*
+
+[[SDL_RWwrite]] writes exactly '''num''' objects each of size ,,'''objsize''',, '''size''' from the area pointed at by '''ptr''' to data source.  <<Color2(green,Should SDL_RWwrite have () like a function even though it's a macro?)>>
 
 == Related Functions ==
-:[[SDL_RWclose]] (Macro) *???
-:[[SDL_RWFromFile]] *???
-:[[SDL_RWread]] (Macro) *???
-:[[SDL_RWseek]](Macro) *???
+:[[SDL_RWclose]] (Macro) *
+:[[SDL_RWFromFile]] *
+:[[SDL_RWread]] (Macro) *
+:[[SDL_RWseek]](Macro) *
 
 <<Color2(green,Should the current read and write functions (not macros) be listed?)>>
 
