update content (w/ Sam)

--- a/SDL_Init.mediawiki
+++ b/SDL_Init.mediawiki
@@ -107,13 +107,7 @@ int main(int argc, char **argv) {
 ```
 
 == Remarks ==
-This function initializes the subsystems specified by '''flags'''.  
-
-The [[CategoryEvents|Event Handling]], [[CategoryIO|File I/O]], and [[CategoryThread|Threading]] subsystems are initialized by default.  To initialize other subsystems you must specifically call them.  
-
-Unless the SDL_INIT_NOPARACHUTE flag is set, it will install cleanup signal handlers for some commonly ignored fatal signals (like SIGSEGV).
-
-You can call SDL_Init(0) or SDL_Init(SDL_INIT_NOPARACHUTE) to initialize SDL without initializing any subsystems.
+This function initializes the subsystems specified by '''flags'''.  The [[CategoryEvents|Event Handling]], [[CategoryIO|File I/O]], and [[CategoryThread|Threading]] subsystems are initialized by default.  To initialize other subsystems you must specifically call them.  Unless the SDL_INIT_NOPARACHUTE flag is set, it will install cleanup signal handlers for some commonly ignored fatal signals (like SIGSEGV).  You can call SDL_Init(0) or SDL_Init(SDL_INIT_NOPARACHUTE) to initialize SDL without initializing any subsystems.
 
 These are the flags which may be passed to [[SDL_Init]]() and may be OR'd together to initialize multiple subsystems.
 
