--- a/Tutorials-TextInput.mediawiki
+++ b/Tutorials-TextInput.mediawiki
@@ -15,34 +15,35 @@ It would not be feasible to have a keyboard with over ten-thousand keys, would i
 * <span id="IME"></span>'''IME''' - Input Method Editor. A software input method. This is typically a program that intercepts key presses and interprets them before (eventually) passing them onto the application.
 * <span id="Composition"></span>'''Composition''' - The text a user is currently inputting. This text is not yet finalized (committed) and the IME may modify it.
 * <span id="Candidate"></span>'''Candidate''' - An optional alternative text for the composition, gathered by the IME in the Candidate List.
-* <span id="CandidateList"></span>'''Candidate List''' - A list of Candidates, used when there is any ambiguity.
+* <span id="CandidateList"></span>'''Candidate List''' - A list of [[#Candidate|Candidate]]s, used when there is any ambiguity.
 
 == Workflow ==
 {|
-|<style="width: 10%">Step
-|<style="width: 60%">Description
-|<style="width: 30%">Example
+|<10%>Step 
+|<60%>Description 
+|<30%>Example 
 |-
-|1
-|The user activates an input method ([[#IME|IME]]). This is typically done via a hotkey or by selecting an input method in a GUI.
-|<style="text-align: right;">[[attachment:TextInput1.png|{{attachment:TextInput1.png|TextInput1|width=150}}|target="_blank"]]
+|1 
+|The user activates an input method ([[#IME|IME]]). This is typically done via a hotkey or by selecting an input method in a GUI. 
+|<style="text-align: right">[[attachment:TextInput1.png|{{attachment:TextInput1.png|TextInput1|width="150"}}]] 
 |-
-|2
-|The user begins to type in their selected language, starting a [[#Composition|Composition]].
-|<style="text-align: right;">[[attachment:TextInput2.png|{{attachment:TextInput2.png|TextInput2|width=150}}|target="_blank"]]
+|2 
+|The user begins to type in their selected language, starting a [[#Composition|Composition]]. 
+|<style="text-align: right">[[attachment:TextInput2.png|{{attachment:TextInput2.png|TextInput2|width="150"}}]] 
 |-
-|3
-|The user continued typing until the composition is satisfactory.
-|<style="text-align: right;">[[attachment:TextInput3.png|{{attachment:TextInput3.png|TextInput3|width=150}}|target="_blank"]]
+|3 
+|The user continued typing until the composition is satisfactory. 
+|<style="text-align: right">[[attachment:TextInput3.png|{{attachment:TextInput3.png|TextInput3|width="150"}}]] 
 |-
-|4
-|Alternatively, the user may choose to open the [[#CandidateList|Candidate List]] and select a [[#Candidate|Candidate]].
-|<style="text-align: right;">[[attachment:TextInput4.png|{{attachment:TextInput4.png|TextInput4|width=150}}|target="_blank"]]
+|4 
+|Alternatively, the user may choose to open the [[#CandidateList|Candidate List]] and select a [[#Candidate|Candidate]]. The [[#IME|IME]] can also force the [[#CandidateList|Candidate List]] to open. 
+|<style="text-align: right">[[attachment:TextInput4.png|{{attachment:TextInput4.png|TextInput4|width="150"}}]] 
 |-
-|5
-|The user commits the [[#Composition|Composition]], terminating it. The [[#IME|IME]] passes the text onto the application.
-|<style="text-align: right;">[[attachment:TextInput5.png|{{attachment:TextInput5.png|TextInput5|width=150}}|target="_blank"]]
+|5 
+|The user commits the [[#Composition|Composition]], terminating it. The [[#IME|IME]] passes the text onto the application. 
+|<style="text-align: right">[[attachment:TextInput5.png|{{attachment:TextInput5.png|TextInput5|width="150"}}]] 
 |}
+
 
 While this provides a good overview, it may not be accurate for all platforms.
 
