update content (w/ Sam)

--- a/SDL_Init.mediawiki
+++ b/SDL_Init.mediawiki
@@ -138,6 +138,8 @@ Unless the SDL_INIT_NOPARACHUTE flag is set, it will install cleanup signal hand
 
 Note that the event system is actually started by the video subsystem, so using SDL_INIT_EVENTTHREAD without SDL_INIT_VIDEO is pointless.
 
+If you want to initialize subsystems separately you would call [[SDL_Init]](0) followed by [[SDL_InitSubSystem]]() with the desired subsystem flag.
+
 == Related Functions ==
 :[[SDL_InitSubSystem]] 
 :[[SDL_Quit]] 
