--- a/SDL_RWwrite.mediawiki
+++ b/SDL_RWwrite.mediawiki
@@ -72,7 +72,7 @@ int main()
 == Remarks ==
 *<br/>This is not a built-in function. This is a macro that calls whatever write function happens to be in the SDL_RWops structure.<br/>*
 
-[[SDL_RWwrite]] writes exactly '''num''' objects each of size ,,'''objsize''',, '''size''' from the area pointed at by '''ptr''' to data source.  <<Color2(green,Should SDL_RWwrite have () like a function even though it's a macro?)>>
+[[SDL_RWwrite]] writes exactly '''num''' objects each of size '''size''' from the area pointed at by '''ptr''' to data source.  <<Color2(green,Should SDL_RWwrite have () like a function even though it's a macro?)>>
 
 == Related Functions ==
 :[[SDL_RWclose]] (Macro) *
