--- a/SDL_LoadWAV.mediawiki
+++ b/SDL_LoadWAV.mediawiki
@@ -33,15 +33,11 @@ SDL_AudioSpec* SDL_LoadWAV(const char*    filename,
 |}
 
 == Return Value ==
-<<Color2(green,Should the pointers on the params in the following paragraph be removed for formatting consistency?  They are present in the header so they are included here.  <br/>NOTE that all of the following is listed for SDL_LoadWAV_RW not SDL_LoadWAV in the header but it is also listed for SDL_LoadWAV in the old wiki so it may or may not apply.)>>
-
-If this function succeeds, it returns the given [[SDL_AudioSpec]], filled with the audio data format of the wave data, sets *'''audio_buf''' to a malloc()'d buffer containing the audio data, and sets *'''audio_len''' to the length of that audio buffer, in bytes.
+If this function succeeds, it returns the given [[SDL_AudioSpec]], filled with the audio data format of the wave data, fils '''audio_buf''' with a pointer to a malloc()'d buffer containing the audio data, and fills '''audio_len''' with a pointer to the length of that audio buffer, in bytes.
 
 This function returns NULL if the wave file cannot be opened, uses an unknown data format, or is corrupt; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
-*<br/><<Color2(green,Does this example still apply in 1.3?  Should it be added as an include to SDL_FreeWAV?)>>
-
 ```c++
 SDL_AudioSpec wav_spec;
 Uint32 wav_length;
@@ -61,7 +57,6 @@ if( SDL_LoadWAV("test.wav", &wav_spec, &wav_buffer, &wav_length) == NULL ){
 /* Free It */
 SDL_FreeWAV(wav_buffer);
 ```
-<br/>*
 
 == Remarks ==
 Currently raw and MS-ADPCM WAVE files are supported.
