--- a/SDLEnumTemplate.mediawiki
+++ b/SDLEnumTemplate.mediawiki
@@ -34,4 +34,4 @@ You can add your code example here
 :[[SDL_FunctionLeaveSectionIfEmpty]]
 
 ----
-[[CategoryEnum]]
+[[CategoryEnum]], [[CategoryHeaderEnum]]
