--- a/CategoryAudio.mediawiki
+++ b/CategoryAudio.mediawiki
@@ -13,6 +13,12 @@
 
 This category contains functions for handling audio devices and audio input/output.
 
+== Enumerations ==
+<<FullSearch(category:CategoryAudioEnum)>>
+
+== Structures ==
+<<FullSearch(category:CategoryAudioStruct)>>
+
 == Functions ==
 
 <<FullSearch(category:CategoryAudio)>>
