--- a/APIByCategory.mediawiki
+++ b/APIByCategory.mediawiki
@@ -6,16 +6,7 @@
 
 = SDL 1.3 API by Category =
 
-== Enumerations ==
-
-[[CategoryEnum|View the SDL Enumerations]]
-
-== Structures ==
-
-[[CategoryStruct|View the SDL Structures]]
-
-== Functions ==
-=== Basics ===
+== Basics ==
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -32,7 +23,7 @@
 |}
 
 
-=== Video ===
+== Video ==
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -55,7 +46,7 @@
 |}
 
 
-=== Input Events ===
+== Input Events ==
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -75,7 +66,7 @@
 |}
 
 
-=== Force Feedback ===
+== Force Feedback ==
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -86,7 +77,7 @@
 |}
 
 
-=== Audio ===
+== Audio ==
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -97,7 +88,7 @@
 |}
 
 
-=== Threads ===
+== Threads ==
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -114,7 +105,7 @@
 |}
 
 
-=== Timers ===
+== Timers ==
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -125,7 +116,7 @@
 |}
 
 
-=== File I/O Abstraction ===
+== File I/O Abstraction ==
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -136,8 +127,7 @@
 |}
 
 
-=== Shared Object Support ===
-
+== Shared Object Support ===
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
 |'''View the header'''
@@ -147,7 +137,7 @@
 |}
 
 
-=== Platform and CPU Information ===
+== Platform and CPU Information ==
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
@@ -164,7 +154,7 @@
 |}
 
 
-=== Power Management ===
+== Power Management ==
 
 {|
 |<tablewidth="100%"width="75%">'''View information and functions related to...'''
