--- a/CategoryError.mediawiki
+++ b/CategoryError.mediawiki
@@ -14,6 +14,12 @@ Functions in this category provide simple error message routines for SDL. These 
 
 The SDL error messages are in English.
 
+== Enumerations ==
+<<FullSearch(category:CategoryErrorEnum)>>
+
+== Structures ==
+<<FullSearch(category:CategoryErrorStruct)>>
+
 == Functions ==
 
 <<FullSearch(category:CategoryError)>>
