--- a/CategoryVersion.mediawiki
+++ b/CategoryVersion.mediawiki
@@ -24,6 +24,12 @@ These functions are used to collect or display information about the version of 
 : The version number may also be reported as a 4-digit numeric value where the thousands place represents the major version, the hundreds place represents the minor version, and the tens and ones places represent the patchlevel (update version).  
  ''Example:'' The current version is 1300
 
+== Enumerations ==
+<<FullSearch(category:CategoryVersionEnum)>>
+
+== Structures ==
+<<FullSearch(category:CategoryVersionStruct)>>
+
 == Functions ==
 
 <<FullSearch(category:CategoryVersion)>>
