--- a/CategoryVideo.mediawiki
+++ b/CategoryVideo.mediawiki
@@ -13,6 +13,12 @@
 
 This category contains functions for handling display, window, and rendering actions.
 
+== Enumerations ==
+<<FullSearch(category:CategoryVideoEnum)>>
+
+== Structures ==
+<<FullSearch(category:CategoryVideoStruct)>>
+
 == Functions ==
 
 <<FullSearch(category:CategoryVideo)>>
