--- a/CategoryAtomic.mediawiki
+++ b/CategoryAtomic.mediawiki
@@ -13,6 +13,12 @@
 
 This category contains functions for handling atomic operations in both 32-bit and 64-bit platforms.
 
+== Enumerations ==
+<<FullSearch(category:CategoryAtomicEnum)>>
+
+== Structures ==
+<<FullSearch(category:CategoryAtomicStruct)>>
+
 == Functions ==
 
 <<FullSearch(category:CategoryAtomic)>>
