added enums and structs list

--- a/CategoryTimer.mediawiki
+++ b/CategoryTimer.mediawiki
@@ -13,6 +13,12 @@
 
 This category contains functions for handling the SDL time management routines.
 
+== Enumerations ==
+<<FullSearch(category:CategoryTimerEnum)>>
+
+== Structures ==
+<<FullSearch(category:CategoryTimerStruct)>>
+
 == Functions ==
 
 <<FullSearch(category:CategoryTimer)>>
