--- a/CategoryPlatform.mediawiki
+++ b/CategoryPlatform.mediawiki
@@ -15,6 +15,12 @@
 ^This category contains functions for handling information about the current platform.^ ,,Functions in this category allow you to gather information about the platform you are working on / are compiling/creating for.,,
 
 
+== Enumerations ==
+<<FullSearch(category:CategoryPlatformEnum)>>
+
+== Structures ==
+<<FullSearch(category:CategoryPlatformStruct)>>
+
 == Functions ==
 
 <<FullSearch(category:CategoryPlatform)>>
