--- a/SDL_BlendMode.mediawiki
+++ b/SDL_BlendMode.mediawiki
@@ -41,4 +41,4 @@ You can add your code example here
 :[[SDL_SetTextureBlendMode]]
 
 ----
-[[CategoryEnum]]
+[[CategoryEnum]], [[CategoryVideoEnum]]
