added header-specific Category link

--- a/SDL_Color.mediawiki
+++ b/SDL_Color.mediawiki
@@ -51,4 +51,4 @@ If you have HTML color codes you would use hexidecimal values in this struct.
 :[[SDL_SetTexturePalette]]
 
 ----
-[[CategoryStruct]]
+[[CategoryStruct]], [[CategoryPixelsStruct]]
