added header-specific Category link

--- a/SDL_HapticCondition.mediawiki
+++ b/SDL_HapticCondition.mediawiki
@@ -105,4 +105,4 @@ You can add your code example here
 == Related Functions ==
 
 ----
-[[CategoryStruct]]
+[[CategoryStruct]], [[CategoryForceFeedbackStruct]]
