added header-specific Category link

--- a/SDL_HapticConstant.mediawiki
+++ b/SDL_HapticConstant.mediawiki
@@ -87,4 +87,4 @@ A constant effect applies a constant force <to the joystick< in the specified di
 == Related Functions ==
 
 ----
-[[CategoryStruct]]
+[[CategoryStruct]], [[CategoryForceFeedbackStruct]]
