added header-specific Category link

--- a/SDL_HapticCustom.mediawiki
+++ b/SDL_HapticCustom.mediawiki
@@ -99,4 +99,4 @@ If '''channels''' is ''1'', the effect is rotated using the defined direction. O
 == Related Functions ==
 
 ----
-[[CategoryStruct]]
+[[CategoryStruct]], [[CategoryForceFeedbackStruct]]
