--- a/SDL_MouseWheelEvent.mediawiki
+++ b/SDL_MouseWheelEvent.mediawiki
@@ -36,4 +36,4 @@ You can add your code example here
 == Related Functions ==
 
 ----
-[[CategoryStruct]]
+[[CategoryStruct]], [[CategoryEventsStruct]]
