--- a/SDL_version.mediawiki
+++ b/SDL_version.mediawiki
@@ -46,4 +46,4 @@ The macro [[SDL_VERSION]] can be used to populate this structure with informatio
 : [[SDL_GetVersion]]
 
 ----
-[[CategoryStruct]], [[CategoryVersion|CategoryVersionStruct]]
+[[CategoryStruct]], Category<code></code>Version<code></code>Struct
