--- a/CategoryPixels.mediawiki
+++ b/CategoryPixels.mediawiki
@@ -20,7 +20,7 @@ This category contains functions for handling pixel, palette, and color formats 
 
 == Functions ==
 
-<<FullSearchCached(category:CategoryPixels)>>
+<<FullSearch(category:CategoryPixels -CategoryStruct -CategoryEnum)>>
 
 ----
 CategoryCategory
